# mSqliteCpp

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  Readme.md  conanfile.py  conanfile.txt  layout.ini  main.cmake  main.cpp  sqlitefielddef.h  sqlitestorage.cpp  sqlitestorage.h  sqlitetable.cpp  sqlitetable.h
.circleci/: config.yml
.github/workflows/: build.yml  debian.yml
cmake/: Findsqlite3.cmake  MSqliteCppConfig.cmake  compileropts.cmake  dependencies.cmake  googletest.cmake  install.cmake  msqlitecppConfig.cmake  options.cmake
cmake/modules/: Findsqlite3.cmake
debian/: README  changelog  control  copyright  msqlitecpp-dev.dirs  msqlitecpp-dev.install  rules
docs/: api.md
examples/insert/: CMakeLists.txt
include/: clauses.h  createstatement.h  deletestatement.h  insertstatement.h  msqlitecpp.h  operators.h  selectstatement.h  sqlconstants.h  sqlformatters_helpers.h  sqlitefielddef.h  sqlitefieldsop.h  sqlitestatement.h  sqlitestatementformatters.h  sqlitestorage.h  sqlitetable.h  sqlitetransaction.h  updatestatement.h
include/msqlitecpp/: clauses.h  createstatement.h  deletestatement.h  insertstatement.h  operators.h  sqlformatters_helpers.h  sqlitefielddef.h  sqlitefieldsop.h  sqlitestatement.h  sqlitestatementformatters.h  sqlitestorage.h  sqlitetable.h  sqlitetransaction.h  updatestatement.h  version.h.in
include/msqlitecpp/v1/: clauses.h  createstatement.h  deletestatement.h  insertstatement.h  operators.h  selectstatement.h  sqlformatters_helpers.h  sqlitefielddef.h  sqlitefieldsop.h  sqlitestatement.h  sqlitestatementformatters.h  sqlitestorage.h  sqlitetable.h  sqlitetransaction.h  updatestatement.h
include/msqlitecpp/v2/: createstatement.h  exceptions.h  fields.h  insertstatement.h  msqlitecpp.h  selectstatement.h  statement.h  storage.h
include/msqlitecpp/v2/helpers/: formatters.h
profiler/: CMakeLists.txt  profiler.cpp
src/: CMakeLists.txt  sqlitestatement.cpp  sqlitestorage.cpp  sqlitetable.cpp  sqlitetransaction.cpp  version.cpp
src/utils/: make_unique.h
src/v1/: CMakeLists.txt  sqlitestatement.cpp  sqlitestorage.cpp  sqlitetable.cpp  sqlitetransaction.cpp
src/v2/: CMakeLists.txt  statement.cpp  storage.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: main.cpp
tests/: CMakeLists.txt  NullsTest.cpp  OptionalTests.cpp  StrongTypeTests.cpp  TestForeignKeys.cpp  WhereOptTests.cpp  clauses.cpp  issues.cpp  sqlformatting.cpp  statements.cpp  table.cpp  transactions.cpp  updatestatements.cpp  version_test.cpp
tests/v1/: CMakeLists.txt  NullsTest.cpp  OptionalTests.cpp  StrongTypeTests.cpp  TestForeignKeys.cpp  ToString.cpp  WhereOptTests.cpp  clauses.cpp  issues.cpp  sqlformatting.cpp  statements.cpp  table.cpp  transactions.cpp  updatestatements.cpp
tests/v2/: CMakeLists.txt  createstatement.cpp  fields.cpp  insertstatements.cpp  selectstatements.cpp  statements.cpp  storage.cpp
vcpkg/msqlitecpp/: CONTROL  portfile.cmake
